# lawnberry_pi

./: .env.example  .gitattributes  .gitignore  .last_test_status  .pre-commit-config.yaml  .yamllint  ADVANCED_PATTERNS_IMPLEMENTATION_SUMMARY.md  AGENT.md  AGENTS.md  BOOKWORM_COMPATIBILITY_IMPLEMENTATION_SUMMARY.md  CHANGES.md  CLAUDE.md  CLEANUP_MANIFEST.md  CODEBASE_ANALYSIS_REPORT.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  GOOGLE_MAPS_INTEGRATION_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_READINESS_PLAN.md  LawnBerryPi_EngineeringPlan.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PR_ANALYSIS_FINAL_REPORT.md  PULL_REQUEST_BODY.md  README.md  README_communication.md  README_system_integration.md  REAL_SENSOR_DATA_IMPLEMENTATION.md  REPOSITORY_RESTRUCTURE_MANIFEST.md  SPEC.md  TODO_AUDIT_REPORT.md  activate_coral.sh  check_versions.py  cleanup_temp_files.sh  hardware_detection_results.json  incomplete_task_list.md  install_system_integration.sh  lawnberry-api-fixed.service  openapi.json  plan.md  pyproject.toml  (+27 more)
.claude/: settings.json
.github/: CODEOWNERS  NOTES_T048_T050.txt  PENDING_REVIEW_COMMENT.md  PLEASE_OPEN_THIS_PR.md  PR_25_PROGRESS.md  PR_BODY.md  PR_COMMENT_T048_T050.md  PR_PROGRESS_UPDATE.md  REVIEW_COMMENT_BODY.md  REVIEW_PROGRESS_T048_T050.md  WORKFLOW_GUIDE.md  (+2 more)
lawnberry-rebuild/: README.md  pyproject.toml  spec.md  test_integration.py
lawnberry-rebuild/.github/workflows/: hardware-guard.yml
lawnberry-rebuild/backend/src/: main.py
lawnberry-rebuild/backend/src/api/: rest.py  rest_v1.py
lawnberry-rebuild/backend/src/core/: ipc.py  observability.py  persistence.py  weather_client.py
lawnberry-rebuild/backend/src/models/: __init__.py  ai_processing.py  alert.py  auth_security_config.py  motor_command.py  navigation_state.py  operational_data.py  power_management.py  remote_access_config.py  system_configuration.py  training_data.py  zone.py
lawnberry-rebuild/backend/src/services/: acme_service.py  camera_stream_service.py  navigation_service.py  power_service.py  remote_access_service.py  weather_service.py
lawnberry-rebuild/docs/: OPERATIONS.md  TESTING.md  authentication-config.md  privacy.md
lawnberry-rebuild/frontend/: .eslintrc.cjs  package-lock.json  package.json  vitest.config.ts
lawnberry-rebuild/frontend/public/: manifest.json
lawnberry-rebuild/frontend/src/: App.vue  main.ts
lawnberry-rebuild/frontend/src/assets/: main.css
lawnberry-rebuild/frontend/src/components/: ControlPanel.vue  MetricWidget.vue  StatusCard.vue  UserMenu.vue
lawnberry-rebuild/frontend/src/composables/: useApi.ts  useWebSocket.ts
lawnberry-rebuild/frontend/src/router/: index.ts
lawnberry-rebuild/frontend/src/types/: auth.ts  system.ts
lawnberry-rebuild/frontend/src/utils/: markdown.ts
lawnberry-rebuild/frontend/src/views/: AIView.vue  ControlView.vue  DashboardView.vue  DocsHubView.vue  LoginView.vue  MapsView.vue  PlanningView.vue  SettingsView.vue  TelemetryView.vue
lawnberry-rebuild/frontend/tests/e2e/: test_dashboard.spec.ts  test_manual_control.spec.ts
lawnberry-rebuild/frontend/tests/integration/: test_auth_routes.ts  test_ws_client.ts
lawnberry-rebuild/frontend/tests/unit/: sample.spec.ts  weatherApi.spec.ts
lawnberry-rebuild/scripts/: check_docs_drift.sh  test_latency.py  test_performance_degradation.py  test_websocket_load.py
lawnberry-rebuild/specs/004-lawnberry-pi-v2/: tasks.md
lawnberry-rebuild/systemd/: install_services.sh  lawnberry-acme-renew.timer  lawnberry-backend.service  lawnberry-database.service  lawnberry-frontend.service  lawnberry-health.service  lawnberry-remote-access.service  lawnberry-sensors.service
lawnberry-rebuild/tests/contract/: test_jobs.py  test_rest_api_ai.py  test_rest_api_planning.py  test_rest_api_settings.py  test_rest_api_telemetry.py  test_rest_api_weather.py  test_status.py  test_websocket_api.py
lawnberry-rebuild/tests/integration/: conftest.py  test_backup_migration.py  test_dead_reckoning.py  test_hardware_compliance.py  test_hardware_selftest.py  test_manual_control_auth.py  test_map_cost_control.py  test_migration_v1_to_v2.py  test_systemd_health.py  test_telemetry_perf.py  test_webui_experience.py
lawnberry-rebuild/tests/unit/: test_auth_security_levels.py
v2/lawnberry-v2/: .pre-commit-config.yaml  pyproject.toml
v2/lawnberry-v2/.github/: pull_request_template.md
v2/lawnberry-v2/.github/workflows/: ci.yml  deps-lock.yml  hardware-guard.yml  pr-hygiene.yml  sim-tests.yml  webui-build.yml
v2/lawnberry-v2/.specify/memory/: AGENT_JOURNAL.md  constitution.md
v2/lawnberry-v2/docs/: architecture.md
v2/lawnberry-v2/docs/ai-acceleration/: cpu-tflite.md
v2/lawnberry-v2/scripts/: pi_bootstrap.sh  setup_env_coral.sh  setup_env_cpu.sh  setup_env_hailo.sh
v2/lawnberry-v2/spec/: agent_rules.md  hardware.yaml
v2/lawnberry-v2/src/lawnberry/: __init__.py  core.py
v2/lawnberry-v2/src/lawnberry/adapters/: __init__.py
v2/lawnberry-v2/src/lawnberry/ai/: detect.py
v2/lawnberry-v2/src/lawnberry/api/: __init__.py  app.py  dashboard.py  manual.py  telemetry.py
v2/lawnberry-v2/src/lawnberry/cli/: __init__.py
v2/lawnberry-v2/src/lawnberry/core/: __init__.py  __main__.py  websocket_hub.py
v2/lawnberry-v2/src/lawnberry/models/: __init__.py  websocket_events.py
v2/lawnberry-v2/src/lawnberry/runners/: __init__.py  cpu_tflite_runner.py
v2/lawnberry-v2/src/lawnberry/services/: __init__.py
v2/lawnberry-v2/src/lawnberry/specs/: __init__.py  brand_asset.py  dataset_export_job.py  hardware_profile.py  mow_job_event.py  operator_credential.py  rest_contract.py  telemetry_cadence_policy.py  telemetry_stream.py  websocket_topic.py  webui_page.py
v2/lawnberry-v2/src/lawnberry/utils/: __init__.py
v2/lawnberry-v2/systemd/: mower-core.service
v2/lawnberry-v2/tests/: conftest.py  test_project_structure.py
v2/lawnberry-v2/tests/contract/: __init__.py  test_webui_rest_contracts.py  test_webui_websocket_contracts.py
v2/lawnberry-v2/tests/integration/: __init__.py  test_webui_pages_contract_matrix.py
v2/lawnberry-v2/tests/unit/: __init__.py  test_cpu_tflite_runner.py
(+1381 files in other folders)
