[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawnberry-pi"
version = "0.1.0"
description = "LawnBerry Pi v2 Unified System"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "websockets>=12.0",
    "python-multipart>=0.0.27",
    "PyYAML>=6.0.1",
    "pyjwt>=2.12.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.8.0",
    "structlog>=23.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "Pygments>=2.20.0",
    # ARM64-friendly hardware access libs (optional at runtime; imported lazily)
    "smbus2>=0.4.3",
    "pyserial>=3.5",
    # Geometry validation for map overlap checks (libgeos available via Pi OS repos)
    "shapely>=2.0.4",
    "timezonefinder>=6.2.0",
    # Numerics for orientation math and latency aggregation without pulling accelerator deps
    "numpy>=1.26.4,<2.0",
    # Lightweight image decode/resize support for CPU inference and camera-adjacent workflows
    "Pillow>=9.4.0",
    # Load .env for runtime secrets (e.g., NTRIP_*)
    "python-dotenv>=1.2.2",
    "starlette>=0.49.1",
]

# Optional extras for hardware backends (install with: pip install .[hardware])
[project.optional-dependencies]
hardware = [
    # Adafruit Blinka + CircuitPython VL53L0X for ToF (preferred on Pi)
    "adafruit-blinka>=8.8.0",
    "adafruit-circuitpython-bno08x>=1.3.2",
    "adafruit-circuitpython-vl53l0x>=3.6.19",
    # GPIO providers (any one is sufficient)
    "lgpio>=0.2.2; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "python-periphery>=2.4.1",
    "RPi.GPIO>=0.7.1; platform_machine == 'armv7l'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "integration: marks tests that exercise broader cross-component or persistence-backed behavior",
]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
# Ratchet approach (architecture plan §10): existing files carry historic debt
# in three rule families that are pervasive and largely cosmetic. New code
# should still try to pass these rules, but globally enforcing them on the
# existing tree would require ~95 changes scattered across many files.
# Re-tighten on a per-directory basis as files are touched.
ignore = [
    "E501",  # line too long (~48 historical violations)
    "E402",  # module-level import not at top of file (~33; often deliberate lazy imports)
    "B008",  # function call in default argument (FastAPI Depends/Pydantic Field, ~14)
]

[tool.ruff.lint.per-file-ignores]
"backend/src/api/rest.py" = [
    # Legacy file with mixed import placement and length
    "E402", "F401", "I001", "E501", "UP017", "UP006", "UP045", "B904", "F821"
]
"backend/src/models/__init__.py" = [
    # Deliberate name-collision re-exports across submodules; resolving requires
    # downstream import audit. Tracked for follow-up.
    "F811",
]

[tool.uv]
# Use PyPI only. Modern packages publish manylinux wheels for aarch64
# (Pi 4/5 64-bit OS) on PyPI, so the historical piwheels detour is no
# longer needed and previously caused cross-platform breakage:
#   - piwheels splits ARM into armv6l/armv7l/aarch64 wheel sets, and the
#     resolver picked armv7l-only entries for Pi 4/5 (aarch64), failing.
#   - piwheels has no x86_64 wheels, so CI on Ubuntu x86 failed on every
#     piwheels-pinned package.
# Resolve for the platforms we actually run on so the lockfile contains
# wheels valid on each.
index-url = "https://pypi.org/simple"
environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'armv7l'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
