[project]
name = "lawnberry-pi"
version = "0.1.0"
description = "LawnBerry Pi v2 Unified System"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.115.0"
uvicorn = {version=">=0.30.0", extras=["standard"]}
httpx = ">=0.27.0"
pydantic = ">=2.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E","F","I","UP","B"]
ignore = []
